# iChar-project

./: .gitignore  README.md  docker-compose-dev.yml
.tools/: env_create.py
backend/: .env.local.example  .gitignore  Dockerfile.dev  entrypoint.sh  pyproject.toml
backend/core/: settings.py  urls.py
backend/module_resume/: apps.py  models.py  serializers.py  urls.py  views.py
backend/module_resume/migrations/: 0001_initial.py
db/: .env.local
frontend/: .env.local.example  README.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/api/: resumeApi.ts  store.ts
frontend/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx
frontend/components/main/blocks/: AboutUs.tsx  Contact.tsx  Expertise.tsx  Hero.tsx  Services.tsx  Testimonials.tsx
frontend/components/people/: index.tsx
frontend/components/people/components/: Certification.tsx  Education.tsx  Experience.tsx  ProfileHeader.tsx  Projects.tsx  Skills.tsx
frontend/components/people/types/: PersonDescription.ts
frontend/components/resume/components/: ResumeTable.tsx  resumeStatusParser.ts
frontend/components/resume/components/edit/: ResumeButtonCreate.tsx  ResumeButtonDelete.tsx  ResumeButtonEdit.tsx  ResumeForm.tsx  resumeInitialValues.ts
frontend/components/resume/types/: ResumeI.ts
frontend/pages/: _app.tsx  _document.tsx  index.tsx  main.tsx
frontend/pages/people/: Ches.tsx  frolovis.tsx  kovtun.tsx  kovtuns.tsx  kutuzov.tsx  silin.tsx  sklyarov.tsx
frontend/pages/resume/: index.tsx
frontend/styles/: animation.ts  fonts.css  globals.css
(+9 files in other folders)
