[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["sklyarovdd <d.skliarov@pdminstroy.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.5"
djangorestframework = "3.14.0"
django-filter = "^23.2"
markdown = "^3.4.4"
django-cors-headers = "^4.2.0"
drf-writable-nested = "^0.7.0"
openpyxl = "^3.1.2"
pandas =  [
    {version = "*", python=">=3.13"},
    {version = "^2.1.0", python=">=3.11,<3.13"},
]
xlsxwriter = "^3.1.9"
docxtpl = "^0.16.7"
celery = "^5.3.6"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"
json-log-formatter = "^0.5.2"
django-prometheus = "^2.3.1"
requests = "^2.31.0"
djangorestframework-simplejwt = "^5.3.1"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"
minio = "^7.2.7"
psycopg = {extras = ["binary"], version = "^3.2.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
